# r8brain-free-src

./: .gitignore  CDSPBlockConvolver.h  CDSPFIRFilter.h  CDSPFracInterpolator.h  CDSPHBConvolver.h  CDSPHBDownsampler.h  CDSPHBUpsampler.h  CDSPProcessor.h  CDSPRealFFT.h  CDSPResampler.h  CDSPSincFilterGen.h  CMakeLists.txt  LICENSE  License.txt  README.md  calcErrorTable.cpp  example.cpp  fft4g.h  pffft-double.cpp  pffft-double.h  pffft.cpp  pffft.h  r8bbase.cpp  r8bbase.h  r8bconf.h  r8butil.h
.github/: FUNDING.yml
DLL/: r8b-src.pas  r8bsrc.cpp  r8bsrc.h  r8bsrc.pas
DLL/Win32/: r8bsrc.lib
DLL/Win64/: r8bsrc.lib
bench/: README.md  masstest.cpp  r8bfreesrc.cpp  rmscompare.cpp  sacd.cpp  snrtest.cpp  zerotest.cpp
data-fitting/: lp-filter-data.txt
fft/: fft4g.h  pffft.c  pffft_priv_impl.h
fft/simd/: pf_neon_double_from_avx.h  pf_sse2_double.h
other/: License.txt  calcCorrTable.cpp  calcErrorTable.cpp  flt-data-blackman-22-40.txt  flt-data-blackman-nuttall-25-45.txt  flt-data-nuttall-05-25.txt  flttest.cpp  fracfit.cpp  fracopt.cpp  genhbc.cpp  hbopt.cpp  lp-filter-data-022.txt  lp-filter-data.txt  r8bdoxy.txt  winopt.cpp
pffft_double/: pffft.c  pffft.h  pffft_common.c  pffft_common.h  pffft_double.c  pffft_double.h  pffft_priv_impl.h
pffft_double/simd/: pf_altivec_float.h  pf_avx_double.h  pf_float.h  pf_neon_double.h  pf_neon_float.h  pf_scalar_double.h  pf_scalar_float.h  pf_sse1_float.h  pf_sse2_double.h
tags/version-0.1/: CDSPBlockConvolver.h  CDSPResampler.h  calcErrorTable.cpp  r8bbase.cpp  r8bbase.h
tags/version-0.2/: CDSPRealFFT.h  CDSPSincFilterGen.h  r8bbase.h
tags/version-0.3/: CDSPSincFilterGen.h  r8bbase.h
tags/version-0.4/: CDSPFIRFilterParams.h  CDSPFracInterpolator.h  CDSPResampler.h  calcErrorTable.cpp  r8bbase.h
tags/version-0.5/: CDSPFracInterpolator.h  CDSPRealFFT.h  example.cpp  r8bconf.h
tags/version-0.6/: CDSPRealFFT.h  CDSPResampler.h  CDSPSincFilterGen.h  fft4g.h  r8bbase.h  r8bconf.h
tags/version-0.7/: CDSPFIRFilter.h  CDSPFracInterpolator.h  CDSPResampler.h  CDSPSincFilterGen.h  r8bbase.h
tags/version-0.8/: CDSPFracInterpolator.h  r8bbase.cpp  r8bconf.h
tags/version-0.9/: CDSPBlockConvolver.h  CDSPFIRFilterParams.h  CDSPFracInterpolator.h  CDSPRealFFT.h  CDSPResampler.h
tags/version-1.0/: CDSPFIRFilter.h  (+2 more)
trunk/: CDSPBlockConvolver.h  CDSPFIRFilter.h  CDSPFracInterpolator.h  CDSPProcessor.h  CDSPRealFFT.h  CDSPResampler.h  CDSPSincFilterGen.h  License.txt  calcErrorTable.cpp  example.cpp  r8b.cpp  r8bbase.cpp  r8bbase.h  r8bconf.h
(+33 files in other folders)
